<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/lightpurple"
    tools:context=".ProfileEditActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar3"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />
    </android.support.design.widget.AppBarLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/first_name"
                android:layout_marginTop="60dp"
                android:layout_alignParentBottom="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:dividerPadding="4dp"
                android:orientation="horizontal">

                <TextView
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/first_name"
                    android:id="@+id/profile_first_name_text"
                    android:background="?android:attr/selectableItemBackground"
                    android:textSize="16sp"
                    android:layout_marginLeft="20dp"
                    android:padding="4dp"/>

                <EditText
                    android:textSize="16sp"
                    android:layout_width="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:padding="6dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/first_name"
                    android:inputType="text"
                    android:id="@+id/profile_view_first_name"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/last_name"
                android:layout_alignParentBottom="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:showDividers="middle"
                android:dividerPadding="4dp"
                android:orientation="horizontal">

                <TextView
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/last_name"
                    android:layout_marginLeft="20dp"
                    android:id="@+id/profile_last_name_text"
                    android:background="?android:attr/selectableItemBackground"
                    android:textSize="16sp"
                    android:padding="4dp"/>

                <EditText
                    android:textSize="16sp"
                    android:layout_width="wrap_content"
                    android:padding="6dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/last_name"
                    android:inputType="text"
                    android:layout_marginLeft="50dp"
                    android:id="@+id/profile_view_last_name"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/email"
                android:layout_alignParentBottom="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:showDividers="middle"
                android:dividerPadding="4dp"
                android:inputType="text"
                android:orientation="horizontal">

                <TextView
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Email"
                    android:id="@+id/profile_email_text"
                    android:background="?android:attr/selectableItemBackground"
                    android:textSize="16sp"
                    android:layout_marginLeft="20dp"
                    android:padding="4dp"/>

                <EditText
                    android:textSize="16sp"
                    android:layout_width="wrap_content"
                    android:padding="6dp"
                    android:layout_height="wrap_content"
                    android:hint="Email"
                    android:inputType="text"
                    android:layout_marginLeft="85dp"
                    android:id="@+id/profile_view_email"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/password"
                android:layout_alignParentBottom="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:showDividers="middle"
                android:dividerPadding="4dp"
                android:orientation="horizontal">

                <TextView
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    android:id="@+id/profile_password_text"
                    android:background="?android:attr/selectableItemBackground"
                    android:textSize="16sp"
                    android:layout_marginLeft="20dp"
                    android:padding="4dp"/>

                <EditText
                    android:textSize="16sp"
                    android:layout_width="match_parent"
                    android:padding="4dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:layout_marginLeft="55dp"
                    android:inputType="text"
                    android:id="@+id/profile_view_password"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/phone"
                android:layout_alignParentBottom="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:showDividers="middle"
                android:dividerPadding="4dp"
                android:orientation="horizontal">

                <TextView
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mobile"
                    android:id="@+id/profile_mobile_text"
                    android:background="?android:attr/selectableItemBackground"
                    android:textSize="16sp"
                    android:layout_marginLeft="20dp"
                    android:padding="4dp"/>

                <EditText
                    android:textSize="16sp"
                    android:layout_width="wrap_content"
                    android:padding="4dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/mobile"
                    android:layout_marginLeft="85dp"
                    android:inputType="number"
                    android:id="@+id/profile_view_mobile"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/blood_group"
                android:layout_alignParentBottom="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:showDividers="middle"
                android:dividerPadding="4dp"
                android:orientation="horizontal">

                <TextView
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Blood Group"
                    android:id="@+id/profile_blood_group_text"
                    android:layout_marginLeft="20dp"
                    android:background="?android:attr/selectableItemBackground"
                    android:textSize="16sp"
                    android:padding="4dp"/>

                <Spinner
                    android:padding="4dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:entries="@array/Blood_Group"
                    android:id="@+id/profile_view_blood_group"/>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="40dp"
                android:orientation="vertical">
                <Button
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="Update"
                    android:id="@+id/update"
                    android:onClick="onClickUpdate"
                    android:layout_marginRight="230dp"
                    android:layout_marginLeft="20dp"/>
                <Button
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="Cancel"
                    android:id="@+id/cancel"
                    android:onClick="onClickCancel"
                    android:layout_marginRight="50dp"
                    android:layout_marginLeft="200dp"/>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>